--- a/SinfarWebClient/SinfarWebClient/www/webclient.html
+++ b/SinfarWebClient/SinfarWebClient/www/webclient.html
@@ -57,7 +57,7 @@
                         <input ng-model="searchText" class="form-control" placeholder="Player Search" flex>
                     </div>
                     <!--list of players per server-->
-                    <div layout="column" class="md-padding">
+                    <div ng-if="playerList.length" layout="column" class="md-padding">
                         <!--server list-->
                         <div ng-repeat="masterServer in servers | filter:{devMasterServer:true,useWebClient:true}"
                              layout="column">
@@ -80,60 +80,62 @@
                                         </span>
                                     </div>
                                 </div>
-                                <div ng-show="server.expanded"
-                                     ng-repeat="player in pfilter = ((playerList | filter:{chatClient:server.port} | filter:searchText) | orderBy:['pcName', 'playerName'])"
-                                     ng-class="{igPlist:settings.ignores.indexOf(player.playerId)!=-1}">
-                                    <div layout="row" layout-align="start center" style="padding-left:15px">
-                                        <!--functions menu-->
-                                        <md-menu>
-                                            <span class="padding-right:1em;" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'" aria-label="PC Menu" ng-click="openMenu($mdOpenMenu, $event)">
-                                                <i class="fa fa-angle-down"></i>
-                                            </span>
-                                            <md-menu-content>
-                                                <md-menu-item>
-                                                    <md-button aria-label="More Info">
-                                                        <i class="fa fa-search" ng-click="charInfo(player)"> More Info</i>
-                                                    </md-button>
-                                                </md-menu-item>
-                                                <md-menu-item ng_if="settings.friends.indexOf(player.playerId)==-1">
-                                                    <md-button aria-label="Friend">
-                                                        <i class="fa fa-heart-o" ng-click="addFriend(player.playerId)"> Add Friend.</i>
-                                                    </md-button>
-                                                </md-menu-item>
-                                                <md-menu-item ng_if="settings.friends.indexOf(player.playerId)!=-1">
-                                                    <md-button aria-label="Unfriend">
-                                                        <i class="fa fa-heart" ng-click="remFriend(player.playerId)"> Remove Friend</i>
-                                                    </md-button>
-                                                </md-menu-item>
-                                                <md-menu-item ng_if="settings.ignores.indexOf(player.playerId)==-1">
-                                                    <md-button aria-label="Ignore">
-                                                        <i class="fa fa-minus" ng-click="mutePlayer(player.playerId)"> OOC Ignore</i>
-                                                    </md-button>
-                                                </md-menu-item>
-                                                <md-menu-item ng_if="settings.ignores.indexOf(player.playerId)!=-1">
-                                                    <md-button aria-label="Un-Ignore">
-                                                        <i class="fa fa-check" ng-click="unmutePlayer(player.playerId)"> Un-Ignore</i>
-                                                    </md-button>
-                                                </md-menu-item>
-                                            </md-menu-content>
-                                        </md-menu>
-                                        <!--player/char-->
-                                        <img ng-src="http://nwn.sinfar.net{{ player.portrait }}" class="img-circle" style="margin-left:5px;" ng-if="settings.portraits" />
-                                        <span style="cursor: pointer; margin-left:5px;"
-                                              ng-class="{sinfarfriend:settings.friends.indexOf(player.playerId)!=-1}"
-                                              ng-show="!player.pcName.length"
-                                              ng-click="setPM(player)">
-                                            {{player.playerName}}
-                                        </span>
-                                        <span style="cursor: pointer; margin-left:5px;"
-                                              ng-class="{'sinfarfriend':settings.friends.indexOf(player.playerId)!=-1}"
-                                              ng-click="setPM(player)"
-                                              ng-if="player.pcName.length">
-                                            <md-tooltip md-direction="right">
+                                <div>
+                                    <div ng-show="server.expanded"
+                                         ng-repeat="player in pfilter = ((playerList | filter:{chatClient:server.port} | filter:searchText) | orderBy:['pcName', 'playerName'])"
+                                         ng-class="{igPlist:settings.ignores.indexOf(player.playerId)!=-1}">
+                                        <div layout="row" layout-align="start center" style="padding-left:15px">
+                                            <!--functions menu-->
+                                            <md-menu>
+                                                <span class="padding-right:1em;" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'" aria-label="PC Menu" ng-click="openMenu($mdOpenMenu, $event)">
+                                                    <i class="fa fa-angle-down"></i>
+                                                </span>
+                                                <md-menu-content>
+                                                    <md-menu-item>
+                                                        <md-button aria-label="More Info">
+                                                            <i class="fa fa-search" ng-click="charInfo(player)"> More Info</i>
+                                                        </md-button>
+                                                    </md-menu-item>
+                                                    <md-menu-item ng_if="settings.friends.indexOf(player.playerId)==-1">
+                                                        <md-button aria-label="Friend">
+                                                            <i class="fa fa-heart-o" ng-click="addFriend(player.playerId)"> Add Friend.</i>
+                                                        </md-button>
+                                                    </md-menu-item>
+                                                    <md-menu-item ng_if="settings.friends.indexOf(player.playerId)!=-1">
+                                                        <md-button aria-label="Unfriend">
+                                                            <i class="fa fa-heart" ng-click="remFriend(player.playerId)"> Remove Friend</i>
+                                                        </md-button>
+                                                    </md-menu-item>
+                                                    <md-menu-item ng_if="settings.ignores.indexOf(player.playerId)==-1">
+                                                        <md-button aria-label="Ignore">
+                                                            <i class="fa fa-minus" ng-click="mutePlayer(player.playerId)"> OOC Ignore</i>
+                                                        </md-button>
+                                                    </md-menu-item>
+                                                    <md-menu-item ng_if="settings.ignores.indexOf(player.playerId)!=-1">
+                                                        <md-button aria-label="Un-Ignore">
+                                                            <i class="fa fa-check" ng-click="unmutePlayer(player.playerId)"> Un-Ignore</i>
+                                                        </md-button>
+                                                    </md-menu-item>
+                                                </md-menu-content>
+                                            </md-menu>
+                                            <!--player/char-->
+                                            <img ng-src="http://nwn.sinfar.net{{ player.portrait }}" class="img-circle" style="margin-left:5px;" ng-if="settings.portraits" />
+                                            <span style="cursor: pointer; margin-left:5px;"
+                                                  ng-class="{sinfarfriend:settings.friends.indexOf(player.playerId)!=-1}"
+                                                  ng-show="!player.pcName.length"
+                                                  ng-click="setPM(player)">
                                                 {{player.playerName}}
-                                            </md-tooltip>
-                                            {{player.pcName}}
-                                        </span>
+                                            </span>
+                                            <span style="cursor: pointer; margin-left:5px;"
+                                                  ng-class="{'sinfarfriend':settings.friends.indexOf(player.playerId)!=-1}"
+                                                  ng-click="setPM(player)"
+                                                  ng-if="player.pcName.length">
+                                                <md-tooltip md-direction="right">
+                                                    {{player.playerName}}
+                                                </md-tooltip>
+                                                {{player.pcName}}
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
